# android-surface

./: .gitignore  README.md  build.gradle  github.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/io/github/wzhijiang/android/surfacetest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/wzhijiang/android/surfacetest/: CustomWebView.java  MainActivity.java  WebViewActivity.java
app/src/main/res/layout/: activity_main.xml  activity_webview.xml
app/src/main/res/values/: ids.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/github/wzhijiang/android/surfacetest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
surface/: build.gradle  publish.gradle
surface/src/androidTest/java/io/github/wzhijiang/android/surface/: ExampleInstrumentedTest.java
surface/src/main/: AndroidManifest.xml
surface/src/main/cpp/: CMakeLists.txt  gl_helper.cpp  gl_helper.h  logger.h  quad_renderer.cpp  quad_renderer.h  quad_renderer_jni.cpp  texture_handle.cpp  texture_handle.h  texture_handle_jni.cpp
surface/src/main/java/io/github/wzhijiang/android/surface/: ExternalTexture.java  GLHelper.java  GLTextureConverter.java  MotionEventWrapper.java  QuadRenderer.java  SimpleWebView.java  TextureHandle.java
surface/src/main/res/layout/: web_layout.xml
surface/src/test/java/io/github/wzhijiang/android/surface/: ExampleUnitTest.java
